This will allow users of --quick-set-primary-uid (and those of gpgme_op_set_uid_flag) to specify the user ID to set as primary user ID unambiguously.
Description
Description
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rG2cbb5760d758 gpg: Emit an ERROR status if --quick-set-primary-uid fails | |||
rG82c53efd6365 gpg: Look up user ID to mark as primary by UID hash |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | • ebo | T5934 Kleopatra: Change the default/primary User ID | ||
Resolved | • ikloecker | T5938 gpgme++: Add support for setting the primary user ID | ||
Resolved | • ikloecker | T6126 gpg: Support specifiying user ID to set as primary as UID hash for --quick-set-primary-uid |